A quick fix for About page (but we need to rethink the html code underneath (e.g. on the first page this block is wrapped with <div id="intro"></div> while on the about page it is not).
svn path=/src/trunk/Pootle/; revision=16190

--- a/html/style.css
+++ b/html/style.css
@@ -290,6 +290,7 @@ html[dir="rtl"] #nav-access
     margin: 0 1em;
 }
 
+#precontent,
 #content {
     clear: both;
 }
@@ -572,7 +573,6 @@ ul.errorlist
 
 .intro
 {
-    clear: both;
     margin: 0 1em;
     padding-top: 2em;
     padding-bottom: 1em;
